--- a/Landing Page/Landing_style.css
+++ b/Landing Page/Landing_style.css
@@ -163,3 +163,91 @@ body {
     border: 1px solid white;
     color: white;
 }
+.hero_background {
+    background-image: url(yoru_bg.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 650px;
+    width: 100%;
+    z-index: -1;
+    position: absolute;
+    top: 0;
+}
+.world_text {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin-top: 150px;
+    margin-left: 180px;
+}
+.world_text h1 {
+    color: white;
+    font-size: 4rem;
+    font-family: "Mark Pro", Arial, sans-serif;
+    letter-spacing: 1.5px;
+}
+.h2_text {
+    position: absolute;
+    left: 0;
+    margin-left: 50px;
+    width: 700px;
+}
+.h2_text h2 {
+    color: white;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.h2_text > h2 > .subtext {
+    display: block;
+}
+.text3 {
+    position: absolute;
+    left: 0;
+    margin-top: 10px;
+    margin-left: 40px;
+    width: 700px;
+}
+.text3 > .p1 {
+    color: gray;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.watchNow_container {
+    position: absolute;
+    left: 0;
+    width: 500px;
+    height: 80px;
+    margin-top: 50px;
+    margin-left: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+}
+.watchNow_container > #WatchNow_button {
+    background-color: #1FA4D0;
+    padding: 10px;
+    border: 1px solid wheat;
+    border-radius: 20px;
+    width: 250px;
+    height: 60px;
+    font-size: 30px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.watchNow_container > #WatchNow_button:hover {
+    border: 1px solid black;
+    color: black;
+}
+.world_text, .h2_text, .text3, .watchNow_container {
+    background-color: transparent;
+    position: relative;
+    z-index: 1;
+}
