--- a/Landing Page/Landing_style.css
+++ b/Landing Page/Landing_style.css
@@ -251,3 +251,324 @@ body {
     position: relative;
     z-index: 1;
 }
+.news_container {
+    display: flex;
+    flex-direction: column;
+    height: 800px;
+    width: 100%;
+    padding: 0;
+    margin-top: 650px;
+    justify-content: flex-start;
+    background: linear-gradient(to right, #072429 10%, black 80%);
+}
+.news_container > .newsHeadline_container {
+    color: white;
+    font-family: "Mark Pro", Arial, sans-serif;
+    font-size: 2rem;
+    letter-spacing: 1.5px;
+    margin-left: 200px;
+    margin-top: 60px;
+}
+.news_container > .newsbox_container {
+    height: auto;
+    width: auto;
+    display: flex;
+    background-color: transparent;
+    flex-direction: row;
+    border-radius: 15px;
+    justify-content: center;
+}
+.whats_happening {
+    background-color: black;
+    height: 370px;
+    width: 680px;
+    margin: 20px 20px;
+    position: relative;
+    display: flex;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    cursor: pointer;
+    z-index: 1;
+}
+.whats_happening:hover {
+    border: 1px solid white;
+}
+.whats_happening > .news_today > .news_title {
+    position: relative;
+    padding: 0;
+    margin-top: 15px;
+    margin-bottom: 0;
+    margin-left: 25px;
+    width: 600px;
+    color: rgb(218, 213, 205);
+    font-size: 3rem;
+    font-weight: bolder;
+    font-family: "Mark Pro", Arial, sans-serif;
+    letter-spacing: 5px;
+}
+.whats_happening > .news_today > .logo_1 {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    top: 0;
+    margin-top: 28px;
+    margin-left: 10px;
+}
+.whats_happening > .news_today > .map_img {
+    width: 630px;
+    height: 250px;
+    margin-top: 50px;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.whats_happening > .news_today > .news_info {
+    color: white;
+    position: absolute;
+    left: 25px;
+    bottom: 0;
+    margin-bottom: 40px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+}
+.whats_happening > .news_today > .watermark {
+    color: #5D5D5A;
+    position: absolute;
+    left: 25px;
+    bottom: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+}
+.other_news {
+    width: 450px;
+    height: auto;
+    background-color: transparent;
+}
+.other_news > .news1 {
+    width: 420px;
+    height: 120px;
+    background-color: #222222;
+    padding: 0;
+    margin: 10px auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 1px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.other_news > .news1:hover {
+    border: 1px solid white;
+    background-color: #36454F;
+}
+.other_news > .news1 > .news1_title {
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2rem;
+    line-height: 1.6;
+    max-height: 3.4rem;
+    width: 400px;
+    padding: 0;
+    display: block;
+    margin-left: 20px;
+    overflow: hidden;
+}
+.other_news > .news1 > .news1_mark {
+    color: #5D5D5A;
+    font-family: sans-serif;
+    font-size: 0.75rem;
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+.other_news > .news1 > .img_changeID {
+    width: 200px;
+    height: 120px;
+    padding: 0;
+    margin: 0;
+    clip-path: polygon(20% 0,100% 0,100% 100%,0 100%);
+    border-radius: 0 8px 8px 0;
+}
+.other_news > .news1 > .logo_2 {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.other_news > .news2 {
+    width: 420px;
+    height: 120px;
+    background-color: #222222;
+    padding: 2px;
+    margin: 10px auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 1px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.other_news > .news2:hover {
+    border: 1px solid white;
+    background-color: #36454F;
+}
+.other_news > .news2 > .news2_title {
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2rem;
+    line-height: 1.6;
+    max-height: 3.4rem;
+    width: 400px;
+    padding: 0;
+    display: block;
+    margin-left: 20px;
+    overflow: hidden;
+}
+.other_news > .news2 > .news2_mark {
+    color: #5D5D5A;
+    font-family: sans-serif;
+    font-size: 0.75rem;
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+.other_news > .news2 > .img_riotExec {
+    width: 200px;
+    height: 120px;
+    padding: 0;
+    margin-right: -50px;
+    margin-top: -3px;
+    clip-path: polygon(20% 0,100% 0,100% 100%,0 100%);
+    border-radius: 0 8px 8px 0;
+}
+.other_news > .news2 > .logo_3 {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.other_news > .news3 {
+    width: 420px;
+    height: 120px;
+    background-color: #222222;
+    padding: 0;
+    margin: 10px auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 1px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.other_news > .news3:hover {
+    border: 1px solid white;
+    background-color: #36454F;
+}
+.other_news > .news3 > .news3_title {
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2rem;
+    line-height: 1.6;
+    max-height: 3.4rem;
+    width: 400px;
+    padding: 0;
+    display: block;
+    margin-left: 20px;
+    overflow: hidden;
+}
+.other_news > .news3 > .news3_mark {
+    color: #5D5D5A;
+    font-family: sans-serif;
+    font-size: 0.75rem;
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+.other_news > .news3 > .img_riotSeattle {
+    width: 200px;
+    height: 120px;
+    padding: 0;
+    margin: 0;
+    clip-path: polygon(20% 0,100% 0,100% 100%,0 100%);
+    border-radius: 0 8px 8px 0;
+}
+.other_news > .news3 > .logo_4 {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.other_news > .news4 {
+    width: 420px;
+    height: 120px;
+    background-color: #222222;
+    padding: 0;
+    margin: 10px auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 1px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.other_news > .news4:hover {
+    border: 1px solid white;
+    background-color: #36454F;
+}
+.other_news > .news4 > .news4_title {
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2rem;
+    line-height: 1.6;
+    max-height: 3.4rem;
+    width: 400px;
+    padding: 0;
+    display: block;
+    margin-left: 20px;
+    margin-top: 30px;
+    overflow: hidden;
+}
+.other_news > .news4 > .news4_mark {
+    color: #5D5D5A;
+    font-family: sans-serif;
+    font-size: 0.75rem;
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    margin-bottom: 35px;
+}
+.other_news > .news4 > .img_riotgamehub {
+    width: 200px;
+    height: 120px;
+    padding: 0;
+    margin: 0;
+    clip-path: polygon(20% 0,100% 0,100% 100%,0 100%);
+    border-radius: 0 8px 8px 0;
+}
+.other_news > .news4 > .logo_5 {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
+    margin-right: 10px;
+}
