--- a/Landing Page/Landing_style.css
+++ b/Landing Page/Landing_style.css
@@ -572,3 +572,191 @@ body {
     margin-top: 10px;
     margin-right: 10px;
 }
+.games_container {
+    width: 100%;
+    height: auto;
+    background-color: #222222;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+.games_container > .games_title {
+    color: white;
+    margin-left: 100px;
+    margin-top: 70px;
+    margin-bottom: 35px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+}
+.games_container > .gameOption_container {
+    height: 450px;
+    width: auto;
+    display: flex;
+    background-color: transparent;
+    flex-direction: row;
+    border-radius: 15px;
+    justify-content: center;
+}
+.gameOption_container > .game1 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    padding: 0;
+    margin: 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.gameOption_container > .game1:hover {
+    border: 2.5px solid white;
+}
+.gameOption_container > .game1 > .img_lolbg {
+    height: 280px;
+    width: 570px;
+    border-radius: 15px;
+    padding: 0;
+    margin: 0;
+}
+.gameOption_container > .game1 > .img_lol {
+    height: 60px;
+    width: 150px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
+.gameOption_container > .game2 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    padding: 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+    margin-left: 10px;
+}
+.gameOption_container > .game2:hover {
+    border: 2.5px solid white;
+}
+.gameOption_container > .game2 > .img_valobg {
+    height: 280px;
+    width: 570px;
+    padding: 0;
+    margin: 0;
+}
+.gameOption_container > .game2 > .img_valoLogo {
+    height: 100px;
+    width: 140px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
+.gameOption_container > .game3 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    margin-top: -120px;
+    padding: 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.gameOption_container > .game3:hover {
+    border: 2.5px solid white;
+}
+.gameOption_container > .game3 > .img_tacticsbg {
+    height: 280px;
+    width: 570px;
+    padding: 0;
+    margin: 0;
+}
+.gameOption_container > .game3 > .img_tacticsLogo {
+    height: 100px;
+    width: 140px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
+.gameOption_container > .game4 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    margin-top: -120px;
+    padding: 0;
+    margin-left: 10px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.gameOption_container > .game4:hover {
+    border: 2.5px solid white;
+}
+.gameOption_container > .game4 > .img_wildrifbg {
+    height: 280px;
+    width: 570px;
+    padding: 0;
+    margin: 0;
+}
+.gameOption_container > .game4 > .img_wildriftLogo {
+    height: 80px;
+    width: 150px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
+.gameOption_container > .game5 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    padding: 0;
+    margin: 0 auto;
+    margin-top: -240px;
+    margin-bottom: 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.gameOption_container > .game5:hover {
+    border: 2.5px solid white;
+}
+.gameOption_container > .game5 > .img_runeterrabg {
+    height: 280px;
+    width: 570px;
+    padding: 0;
+    margin: 0;
+}
+.gameOption_container > .game5 > .img_runeterraLogo {
+    height: 80px;
+    width: 150px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
