--- a/Landing Page/Landing_style.css
+++ b/Landing Page/Landing_style.css
@@ -760,3 +760,92 @@ body {
     top: 30%;
     left: 5%;
 }
+.esports_mainContainer {
+    position: relative;
+    margin-top: -300px;
+}
+.esports_mainContainer > .esports_container {
+    margin-left: 100px;
+    margin-top: -200px;
+}
+.esports_mainContainer > .esports_container > #esports_text {
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.7rem;
+    margin-top: -150px;
+}
+.esportsOption_container {
+    height: 450px;
+    width: auto;
+    display: flex;
+    background-color: transparent;
+    flex-direction: row;
+    border-radius: 15px;
+    justify-content: center;
+    margin-top: 170px;
+}
+
+.esportsOption_container > .esport1 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    margin-top: -120px;
+    padding: 0;
+    border-radius: 15px;
+    display: flex;
+    cursor: pointer;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    margin-right: 10px;
+}
+.esportsOption_container > .esport1:hover {
+    border: 2.5px solid white;
+}
+.esportsOption_container > .esport1 > .img_esport1bg {
+    height: 280px;
+    width: 570px;
+    padding: 0;
+    margin: 0;
+}
+.esportsOption_container > .esport1 > .img_lolLogo {
+    height: 80px;
+    width: 150px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
+.esportsOption_container > .esport2 {
+    width: 570px;
+    height: 280px;
+    background-color: #222222;
+    margin-top: -120px;
+    margin-left: 10px;
+    padding: 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.esportsOption_container > .esport2:hover {
+    border: 2.5px solid white;
+}
+.esportsOption_container > .esport2 > .img_esport2bg {
+    height: 280px;
+    width: 570px;
+    padding: 0;
+    margin: 0;
+}
+.esportsOption_container > .esport2> .img_valoEsportLogo {
+    height: 80px;
+    width: 150px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
