--- a/Landing Page/Landing_style.css
+++ b/Landing Page/Landing_style.css
@@ -849,3 +849,66 @@ body {
     top: 30%;
     left: 5%;
 }
+.RiotForge_mainContainer {
+    position: relative;
+    margin-top: -450px;
+}
+.RiotForge_mainContainer > .RiotForge_container {
+    margin-left: 100px;
+}
+.RiotForge_container > #RiotForge {
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.7rem;
+    margin-top: 225px;
+}
+.RiotForgeOption_container {
+    height: 450px;
+    width: auto;
+    display: flex;
+    background-color: transparent;
+    flex-direction: row;
+    border-radius: 15px;
+    justify-content: center;
+    margin-top: 170px;
+}
+.RiotForgeOption_container > .RiotForge1,
+.RiotForgeOption_container > .RiotForge2,
+.RiotForgeOption_container > .RiotForge3 {
+    width: 400px;
+    height: 250px;
+    background-color: #222222;
+    margin-top: -120px;
+    margin-right: 10px;
+    padding: 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    border: 2.5px solid transparent;
+    overflow: hidden;
+    cursor: pointer;
+}
+.RiotForgeOption_container > .RiotForge1:hover,
+.RiotForgeOption_container > .RiotForge2:hover,
+.RiotForgeOption_container > .RiotForge3:hover {
+    border: 2.5px solid white;
+}
+.RiotForgeOption_container > .RiotForge1 > .img_RiotForge1bg, 
+.RiotForgeOption_container > .RiotForge2 > .img_RiotForge2bg,
+.RiotForgeOption_container > .RiotForge3 > .img_RiotForge3bg {
+    height: 250px;
+    width: 400px;
+    padding: 0;
+    margin: 0;
+}
+.RiotForgeOption_container > .RiotForge1 > .img_RiotForge1Logo,
+.RiotForgeOption_container > .RiotForge2 > .img_RiotForge2Logo,
+.RiotForgeOption_container > .RiotForge3 > .img_RiotForge3Logo {
+    height: 60px;
+    width: 100px;
+    position: absolute;
+    bottom: 70%;
+    top: 30%;
+    left: 5%;
+}
