--- a/Landing Page/Landing_style.css
+++ b/Landing Page/Landing_style.css
@@ -912,3 +912,101 @@ body {
     top: 30%;
     left: 5%;
 }
+.career_container {
+    background-color: white;
+    position: relative;
+    top: -200px;
+    height: 600px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+}
+.career_container > .hiring_info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.career_container > .hiring_info > #hiring_text {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 3rem;
+    margin-top: -10px;
+}
+.career_container > .hiring_info p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.3rem;
+    text-align: center;
+    margin: 0 70px;
+    letter-spacing: 1.5px;
+}
+.career_container > .hiring_info > .availability_container{
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    margin-top: 50px;
+    padding: 0;
+}
+.career_container > .hiring_info > .availability_container >.open_positions, 
+.career_container > .hiring_info > .availability_container >.offices {
+    height: 140px;
+    width: 250px;
+    background-color: #DFDEDE;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+    border-radius: 12px;   
+}
+.career_container > .hiring_info > .availability_container >.open_positions h1, 
+.career_container > .hiring_info > .availability_container >.offices h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 4rem;
+    margin-top: 10px;
+}
+.career_container > .hiring_info > .availability_container >.open_positions h2, 
+.career_container > .hiring_info > .availability_container >.offices h2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;
+    margin-top: -40px;
+    color: #5D5D5A;
+}
+.career_container > .hiring_info > .career_explore {
+    height: 50px;
+    width: 220px;
+    margin-top: 50px;
+    background-color: #D1363A;
+    font-size: 1.25rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color: white;
+    border: 0;
+    border-radius: 15px;
+}
+.career_container > .hiring_info > .career_explore:hover {
+    background-color: #F75D59;
+}
+ .hiringImg_container {
+    position: relative;
+    height: auto;
+    width: auto;
+    margin-left: auto;
+    bottom: 0;
+    margin-right: 0;
+    padding: 0;
+    display: flex;
+}
+.hiringImg_container > .img_hiring {
+    height: 600px;
+    width: auto;
+    margin: 0;
+    padding: 0;
+    clip-path: polygon(15% 0,100% 0,100% 100%,0 100%);
+}
+.hiringImg_container > .img_hiring > .hiring_place {
+    height: 100%;
+    width: 700px
+}
